feat(app): edited
(cherry picked from commit a7fc785e669a2bd26ab163a3afcd6578ad78e411)
